Poner sombra en imagenes en hover, en el html poner datos en footer

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section id="imagenSecundaria">
             <figure>
                 <img src="./img/mount_merapi_volcano_indonesia_2.jpg" alt="Volcan Indonesia">
-                <figcaption>Pisajes</figcaption>
+                <figcaption>Paisajes</figcaption>
             </figure>
             <figure>
                 <img src="./img/model_fashion_glamour_girl_2.jpg" alt="Fashion Glamour">
@@ -46,7 +46,18 @@
             </figure>
         </section>
         <footer>
-
+            <div id="contacto">
+                <h3>Contacto</h3>
+            </div>
+            <div id="terminos">
+                <h3>Terminos</h3>
+            </div>
+            <div id="redes">
+                <h3>Redes Sociales</h3>
+            </div>
+            <div id="derechos">
+                <h3>Derechos</h3>
+            </div>
         </footer>
     </div>
 </body>
