Terminar de maquetar el footer, datos de contacto, redes sociales etc

--- a/index.html
+++ b/index.html
@@ -48,15 +48,24 @@
         <footer>
             <div id="contacto">
                 <h3>Contacto</h3>
+                <div>gonzalo_conta@hotmail.com</div>
+                <div>Bonampak No. Cancún Q. Roo Mex.</div>
+                <div>+52 998 111 2231</div>
             </div>
             <div id="terminos">
-                <h3>Terminos</h3>
+                <h3>Términos</h3>
+                <div>Al acceder, consultar o utilizar el Sitio Web, usted acepta cumplir los términos y condiciones establecidos</div>
+                
             </div>
             <div id="redes">
                 <h3>Redes Sociales</h3>
+                <div>Mi facebook</div>
+                <div>Mi twitter.</div>
+                <div>Mi insta.</div>
             </div>
             <div id="derechos">
                 <h3>Derechos</h3>
+                <div>&copy; 2020 Gonzalo Chable</div>
             </div>
         </footer>
     </div>
