Agregar link en la descripcion de las imagenes secundarias y agregar estilo, agregar pagina de paisajes, pendiente contenido

--- a/paisajes.html
+++ b/paisajes.html
@@ -28,23 +28,11 @@
                 </nav>
             </div>
         </header>
-        <section id="imagenCentral">
-            <picture>
-                <source media="(max-width: 640px)" srcset="./img/polynesia-3021072_640.jpg">
-                <source media="(max-width: 1280px)" srcset="./img/polynesia-3021072_1280.jpg">
-                <img src="./img/polynesia-3021072_1920.jpg" alt="Flowers" style="width: 90%;">
-            </picture>
+
+        <section>
+
         </section>
-        <section id="imagenSecundaria">
-            <figure>
-                <img src="./img/mount_merapi_volcano_indonesia_2.jpg" alt="Volcan Indonesia">
-                <figcaption><a href="paisajes.html">Paisajes</a></figcaption>
-            </figure>
-            <figure>
-                <img src="./img/model_fashion_glamour_girl_2.jpg" alt="Fashion Glamour">
-                <figcaption><a href="retratos.html">Retratos</a></figcaption>
-            </figure>
-        </section>
+        
         <footer>
             <div id="contacto">
                 <h3>Contacto</h3>
