Cambiar el nombre de la pagina a Paisajes

--- a/paisajes.html
+++ b/paisajes.html
@@ -12,7 +12,7 @@
             text-decoration: none;
         }
     </style>
-    <title>Página principal</title>
+    <title>Paisajes</title>
 </head>
 
 <body>
