--- a/retratos.html
+++ b/retratos.html
@@ -12,7 +12,7 @@
             text-decoration: none;
         }
     </style>
-    <title>Página principal</title>
+    <title>Retratos</title>
 </head>
 
 <body>
