Poner liga de redes sociales

--- a/paisajes.html
+++ b/paisajes.html
@@ -56,9 +56,9 @@
             </div>
             <div id="redes">
                 <h3>Redes Sociales</h3>
-                <div>Mi facebook</div>
-                <div>Mi twitter.</div>
-                <div>Mi insta.</div>
+                <div><a href="https://es-la.facebook.com/">Mi facebook</a></div>
+                <div><a href="https://twitter.com/login?lang=es">Mi twitter.</a></div>
+                <div><a href="https://www.instagram.com/?hl=es-la">Mi insta.</a></div>
             </div>
             <div id="derechos">
                 <h3>Derechos</h3>
